web/src/stylesheets/mobi-proto/pages/page--manager-settings.scss
@import "../config/base-vars";
@import "../config/base-mixins";

.prop-header-actions {
  display: none;
}

.score-level-info {
  padding: 0.375rem 1rem;
  margin-top: 15px;

  p {
    margin: 0;
  }
}

.color-high-score {
  color: getScoreColorForLevel('high');
  font-weight: bold;
  font-style: italic;
}

.color-average-score {
  color: getScoreColorForLevel('average');
  font-weight: bold;
  font-style: italic;
}

.color-low-score {
  color: getScoreColorForLevel('low');
  font-weight: bold;
  font-style: italic;
}

.range-wrapper {
  .range-display {
    display: inline-block;
    font-size: 38px;
    vertical-align: middle;
    margin-right: 15px;
    min-width: 59px;
    text-align: right;

    &:after {
      content: "%";
      font-size: 20px;
      margin-left: 2px;
    }
  }

  & .range-details > label {
    font-size: 24px;
    margin-bottom: 0;

    &:after {
      display: none;
    }
  }

  .instructions {
    padding: 0;
  }

  .range-details {
    display: inline-block;
    width: 80%;
    vertical-align: middle;
  }

  input[type="range"].val {
    vertical-align: middle;
  }

  input[type="range"] {
    -webkit-appearance: none;
    margin: 10px 0;
    width: 100%;
    border: none;
  }
  input[type="range"]:focus {
    outline: none;
    box-shadow: none;
    background-color: transparent;
  }
  input[type="range"]::-webkit-slider-runnable-track {
    width: 100%;
    height: 10px;
    cursor: pointer;
    animate: 0.2s;
    //box-shadow: 1px 1px 1px #000000;
    background: #DEDEDE;
    border-radius: 5px;
    border: 1px solid #000000;
  }
  input[type="range"]::-webkit-slider-thumb {
    //box-shadow: 1px 1px 1px #000000;
    border: 1px solid #000000;
    height: 25px;
    width: 25px;
    border-radius: 25px;
    background: #FAFAFA;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -8.5px;
  }
  input[type="range"]:focus::-webkit-slider-runnable-track {
    background: #DEDEDE;
  }
  input[type="range"]::-moz-range-track {
    width: 100%;
    height: 10px;
    cursor: pointer;
    animate: 0.2s;
    //box-shadow: 1px 1px 1px #000000;
    background: #DEDEDE;
    border-radius: 5px;
    border: 1px solid #000000;
  }
  input[type="range"]::-moz-range-thumb {
    //box-shadow: 1px 1px 1px #000000;
    border: 1px solid #000000;
    height: 25px;
    width: 25px;
    border-radius: 25px;
    background: #FAFAFA;
    cursor: pointer;
  }
  input[type="range"]::-ms-track {
    width: 100%;
    height: 10px;
    cursor: pointer;
    animate: 0.2s;
    background: transparent;
    border-color: transparent;
    color: transparent;
  }
  input[type="range"]::-ms-fill-lower {
    background: #DEDEDE;
    border: 1px solid #000000;
    border-radius: 10px;
    //box-shadow: 1px 1px 1px #000000;
  }
  input[type="range"]::-ms-fill-upper {
    background: #DEDEDE;
    border: 1px solid #000000;
    border-radius: 10px;
    //box-shadow: 1px 1px 1px #000000;
  }
  input[type="range"]::-ms-thumb {
    //box-shadow: 1px 1px 1px #000000;
    border: 1px solid #000000;
    height: 25px;
    width: 25px;
    border-radius: 25px;
    background: #FAFAFA;
    cursor: pointer;
  }
  input[type="range"]:focus::-ms-fill-lower {
    background: #DEDEDE;
  }
  input[type="range"]:focus::-ms-fill-upper {
    background: #DEDEDE;
  }
}

.prop-footer {
  margin-top: 10px;
}

